--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
     "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "@mui/icons-material": "^5.2.0",
     "@mui/material": "^5.2.3",
     "@mui/styles": "^5.0.0",
@@ -20,6 +21,8 @@
     "firebase": "^9.6.0",
     "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-alert": "^7.0.3",
+    "react-alert-template-basic": "^1.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-material-ui-carousel": "^3.1.1",
